--- a/main.html
+++ b/main.html
@@ -8,8 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<main class="animal-photos">
-		<h1 class="photo-heading">Animal Photos</h1>
+	<main id="animal-photos">
+		<h1 id="photo-heading">Animal Photos</h1>
 		<div class="image-container">
 			<img src="https://www2.d125.org/applied_arts/teched/courses/WEB/portfolios/2014_FallP8/Rami_Portfolio_Period8/unit4_css/project_1folder/cssProject1/camel.jpg
 " alt="camel" />
